--- a/pruebas/src/styles/Hero.css
+++ b/pruebas/src/styles/Hero.css
@@ -1,11 +1,41 @@
-body {
-    display: flex;    
-    justify-content: center;
+.container-hero {
+    display: flex;
+    width: 100%;     
+    justify-content:space-evenly;    
+    margin-top: 2rem;    
 }
 
 .image-man-programming {       
-    border-radius: 2rem;
+    border-radius: 10px;
     margin-top: 7em;
-    width: 90%;    
+    width: 80%;
 }
+
+.cards-container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 7em;
+    justify-content: space-between;
+    margin-right: 2rem;
+    margin-left: 2rem;
+}
+
+@media screen and (max-width: 1200px) {
+    .container-hero {
+        flex-direction: column;
+        align-items: center;     
+    }
+
+    .image-man-programming {
+        width: 60%;
+        margin-top: 2rem;
+        margin-bottom: -6rem;
+    }
+
+    .cards-container {
+        gap: 2rem;
+    }    
+}
+
+
 
