--- a/pruebas/src/styles/Hero.css
+++ b/pruebas/src/styles/Hero.css
@@ -3,6 +3,7 @@
     width: 100%;     
     justify-content:space-evenly;    
     margin-top: 2rem;    
+    margin-bottom: 2rem;
 }
 
 .image-man-programming {       
